ex2.01/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gopong-svc
spec:
  type: ClusterIP
  selector:
    app: gopong
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: golog-svc
spec:
  type: ClusterIP
  selector:
    app: golog
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
